[tool.poetry]
name        = "enliven"
version     = "1.0"
description = ""
authors     = ["fwarcis <fwarcis@gmail.com>"]
readme      = "README.md"

[tool.poetry.scripts]
main = "enliven.main:main"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
